# LBDA

./: OVERVIEW.md  README_RUBEN.md  TODO.md  ntnu_gurobi_license.txt
Test_instances/__MACOSX/: ._fix_faulty_smps.py
Test_instances/random/: large_00_0.sto  large_00_1.cor  large_00_1.sto  large_00_2.sto  large_00_3.sto  large_00_4.sto  large_00_5.sto  large_01_0.sto  large_01_1.sto  large_01_2.sto  large_01_3.sto  large_01_4.sto  large_01_5.cor  large_01_5.sto  large_02_0.sto  large_02_1.cor  large_02_1.sto  large_02_2.sto  large_02_3.sto  large_02_4.sto  large_02_5.sto  large_03_0.sto  large_03_1.sto  large_03_2.sto  large_03_3.sto  large_03_4.cor  large_03_4.sto  large_03_5.sto  large_04_0.sto  (+252 more)
lbda/: CMakeLists.txt  configure.bat  configure.sh  run.bat  todo.md
lbda/cmake/modules/: FindGurobi.cmake
lbda/include/: deterministicequivalent.h  deterministicequivalent_new.h  masterproblem.h  risk_measure.h  scenarioproblem.h
lbda/include/cutfamilies/: fixed_decomp.h  loosebenders.h  loosebenders_new.h
lbda/solution_reports/new_implementation/solution_reports/: sizes3_1.0_0.0_decom.txt  sizes3_1.0_0.0_deq.txt  sizes5_1.0_0.0_decom.txt  sizes5_1.0_0.0_deq.txt
lbda/src/: CMakeLists.txt  deterministicequivalent.cpp  deterministicequivalent_new.cpp  main.cpp  main.h  masterproblem.cpp  risk_measure.cpp  scenarioproblem.cpp  subproblem.cpp
lbda/src/cutfamilies/: cutfamily.cpp  fixed_decomp.cpp  loosebenders.cpp  loosebenders_new.cpp
lbda/test/: CMakeLists.txt
prototyping/: build_exec.sh  main.cpp  prototype  risk_measure.cpp  risk_measure.h  test  test.cpp
(+20 files in other folders)
